# piapi

./: .travis.yml  DEWAN  Makefile  Makefile.am  Makefile.in  Makefile.pidev  README  TODO  agent.c  agent.pl  analyze.pl  autogen.sh  check  client.pl  config.intel  configure.ac  console.pl  control.pl  deploy.sh  getRawPower.c  getRawPower8  intercomm.pl  logger  logger.c  native.c  piagent.c  piagent.h  piagent_check  piapi.c  piapi.h  picommon.h  pidev.c  pidev.h  pilogger  pilogger.man  pimon  pinative.c  pinative.h  piproxy.8  piproxy.c  (+15 more)
config/: piapi.m4  piapi_powerinsight.m4
doc/: power.bib  power.out  power.tex
doc/ref/: notes.txt
drivers/: Makefile  config.intel  getRawPower.c  init_final.lc  pidev.c  pidev.h  pidev2.c  post_conf.lc
drivers/v1/: Makefile  getRawPower.c  pidev.c  pidev.h
drivers/v2/: Makefile  config.amd  config.intel  init_final.lc  pidev.conf  pidev.h  post_conf.lc
plots/: amperage.gp  power.gp  voltage.gp  wattage.gp
script/: README  agent.pl  analyze.pl  control.pl  getRawPower8  sample.pl
script/plots/: amperage.gp  power.gp  voltage.gp  wattage.gp
script/scripts/: README  agent_kill  agent_start  check_agents_on  compare_experiments_across_runs.py  compare_runs_power.py  constants.py  control_agents_on  gather_stacked_data.py  generate_pie_charts.py  helper_functions.py  kill_agents_on  power_file_parser.py  process_summary.pl  start_agent_on  start_client_on  total_energy_for_run.py
scripts/: README  agent_kill  check_clients_on  client_kill  client_start  control_clients_on  kill_clients_on  process_data.pl  start_client_on
src/: Makefile  Makefile.am  agent.c  getRawPower.c  native.c  piagent.c  piagent.h  piapi.c  piapi.h  picomm.c  picomm.h  picommon.h  pidev.c  pidev.h  pinative.c  pinative.h  piproxy.c  piproxy.h  piutil.c  piutil.h  proxy.c
tools/: Makefile.am  agent.c  deploy-shepard.sh  deploy.sh  native.c  piagent_check  pilogger.8  piproxy_check  piver  piver_check  proxy.c  restart-shepard  rlog  test.c  test.sh
